--- a/nanalike/nanalike.css
+++ b/nanalike/nanalike.css
@@ -53,10 +53,12 @@ body { background-color: #f5f5f5; }
 .main .main__title {color: #fff; z-index: 1; position: relative; }
 .main .listing-card {max-width: 1600px; margin: 30px auto 60px; padding: 0 20px;}
 .main .listing-card__list {
-    display: grid; grid-template-columns: repeat(auto-fill, minmax(750px, 1fr)); gap: 30px;
+    display: grid; grid-template-columns: repeat(auto-fill, minmax(235px, 1fr)); gap: 30px;
 }
 .main .listing-card__item { padding: 20px; width: 100%; background-color: #fff; border: 1px solid #f0f0f0;}
 .main .listing-card__image {padding-top: 70%; height: 0;  background-repeat: no-repeat;}
 .main .listing-card__info {margin: 20px 0 10px;}
 .main .listing-card__name {display: block; margin-bottom: 6px; font-size: 18px;}
 .main .listing-card__date {color: #333; margin-top: 6px;}
+
+.search__label {display: none;}
